tests/interpreter/identifier-undefined.stderr
error: identifier 'foo' is not defined
 --> $DIR/identifier-undefined.lox:1:1
  |
1 | foo;
  | ^^^
